Created CarSearch service, moved api spec to that service and updated makefile
