# carsearch/src/main/java/com/cardb/carsearch/data/constants/BodyType.java
@@ -1,0 +1,12 @@
+package com.cardb.carsearch.data.constants;
+
+public enum BodyType {
+    SEDAN,
+    COUPE,
+    CONVERTIBLE,
+    WAGON,
+    HATCHBACK,
+    SUV,
+    TRUCK,
+    VAN,
+}
