# carsearch/src/main/java/com/cardb/carsearch/data/constants/DriveType.java
@@ -1,0 +1,7 @@
+package com.cardb.carsearch.data.constants;
+
+public enum DriveType {
+    FWD,
+    RWD,
+    AWD,
+}
