# carsearch/src/main/java/com/cardb/carsearch/data/constants/TransmissionType.java
@@ -1,0 +1,9 @@
+package com.cardb.carsearch.data.constants;
+
+public enum TransmissionType {
+    MANUAL,
+    AUTOMATIC,
+    SEMI_AUTOMATIC,
+    CVT,
+    DCT,
+}
