# carsearch/src/main/java/com/cardb/carsearch/data/repository/CarModelRepository.java
@@ -1,0 +1,13 @@
+package com.cardb.carsearch.data.repository;
+
+import com.cardb.carsearch.data.entity.CarModel;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
+import org.springframework.stereotype.Repository;
+
+import java.util.Optional;
+
+@Repository
+public interface CarModelRepository extends JpaRepository<CarModel, Long>, JpaSpecificationExecutor<CarModel> {
+    Optional<CarModel> findBySlug(String slug);
+}
